New tenanted system for querying database

--- a/MonopHelper/Pages/Cards/Edit.cshtml
+++ b/MonopHelper/Pages/Cards/Edit.cshtml
@@ -11,28 +11,33 @@
     </div>
     <div class="card-body bg-light">
         <form method="post">
-            <div class="mt mb">
-                <label asp-for="Input.DeckId"></label>
+            <div class="mt mb-3">
+                <label asp-for="Input.DeckId" class="mb-1"></label>
                 <select asp-for="Input.DeckId" asp-items="Model.CardDecks" class="form-control"></select>
                 <span asp-validation-for="Input.DeckId" class="text-danger"></span>
             </div>
-            <div class="mt mb">
-                <label asp-for="Input.CardTypeId"></label>
+            <div class="mt mb-3">
+                <label asp-for="Input.CardTypeId" class="mb-1"></label>
                 <select asp-for="Input.CardTypeId" asp-items="Model.CardTypes" class="form-control"></select>
                 <span asp-validation-for="Input.CardTypeId" class="text-danger"></span>
             </div>
-            <div class="mt mb">
-                <label asp-for="Input.CardText"></label>
-                <input asp-for="Input.CardText" class="form-control"/>
+            <div class="mt mb-3">
+                <label asp-for="Input.CardText" class="mb-1"></label>
+                <textarea asp-for="Input.CardText" class="form-control" rows="4"></textarea>
                 <span asp-validation-for="Input.CardText" class="text-danger"></span>
             </div>
-            <div class="mt mb">
-                <label asp-for="Input.Cost"></label>
+            <div class="mt mb-3">
+                <label asp-for="Input.Cost" class="mb-1"></label>
+                <span class="fa-solid fa-circle-info mb" 
+                      title="@($"Input how much the player will receive/pay.{Environment.NewLine}Use negative number for paying.{Environment.NewLine}Leave blank if there is no cost involved.")"></span>
                 <input asp-for="Input.Cost" class="form-control"/>
                 <span asp-validation-for="Input.Cost" class="text-danger"></span>
             </div>
-            <div class="mt mb">
-                <input class="btn btn-warning" type="submit" value="@(Model.Adding ? "Create" : "Modify") Card"/>
+            <div class="mt mb" style="display: inline-flex">
+                <input class="btn btn-primary mr" type="submit" value="@(Model.Adding ? "Create" : "Modify") Card"/>
+                <button class="btn btn-warning" type="button" onclick="location.assign('/Cards/Manage/0')">
+                    Cancel
+                </button>
             </div>
         </form>
     </div>
