--- a/MonopHelper/Pages/Shared/Cards/_CardsTable.cshtml
+++ b/MonopHelper/Pages/Shared/Cards/_CardsTable.cshtml
@@ -1,37 +1,47 @@
 @model List<MonopHelper.Models.GameDb.Cards.Card>
 
-<table class="table table-striped table-hover table-bordered">
-    <thead>
-    <tr class="table-dark">
-        <th>Card Type</th>
-        <th>Card Text</th>
-        <th>Cost</th>
-        <th style="width: 85px"></th>
-    </tr>
-    </thead>
-    <tbody>
-    @{
-        foreach (var card in Model)
-        {
-            var cost = card.Cost?.ToString() ?? "";
-            if (cost == "") cost = "-";
-            
-            <tr>
-                <td>@card.CardType.Name</td>
-                <td>@card.Text</td>
-                <td>@cost</td>
-                <td>
-                    <button class="btn btn-sm btn-link" onclick="location.assign('/Cards/Edit/@(card.Id)')"
-                            title="Edit Card">
-                        <span class="fa-solid fa-pencil"></span>
-                    </button>
-                    <button class="btn btn-sm btn-link" onclick="DeleteCard('@(card.Id)')"
-                            title="Delete Card">
-                        <span class="fa-solid fa-x text-danger"></span>
-                    </button>
-                </td>
-            </tr>
-        }
+
+@{
+    if (Model.Count == 0)
+    {
+        <p>There are no cards in this deck.</p>    
     }
-    </tbody>
-</table>
+    else
+    {
+        <table class="table table-striped table-hover table-bordered">
+            <thead>
+            <tr class="table-dark">
+                <th>Card Type</th>
+                <th>Card Text</th>
+                <th>Cost</th>
+                <th style="width: 85px"></th>
+            </tr>
+            </thead>
+            <tbody>
+            @{
+                foreach (var card in Model)
+                {
+                    var cost = card.Cost?.ToString() ?? "";
+                    if (cost == "") cost = "-";
+            
+                    <tr>
+                        <td>@card.CardType.Name</td>
+                        <td>@card.Text</td>
+                        <td>@cost</td>
+                        <td>
+                            <button class="btn btn-sm btn-link" onclick="location.assign('/Cards/Edit/@(card.Id)')"
+                                    title="Edit Card">
+                                <span class="fa-solid fa-pencil"></span>
+                            </button>
+                            <button class="btn btn-sm btn-link" onclick="DeleteCard('@(card.Id)')"
+                                    title="Delete Card">
+                                <span class="fa-solid fa-x text-danger"></span>
+                            </button>
+                        </td>
+                    </tr>
+                }
+            }
+            </tbody>
+        </table>       
+    }
+}
