--- a/MonopHelper/Pages/Shared/Cards/_CardTypesTable.cshtml
+++ b/MonopHelper/Pages/Shared/Cards/_CardTypesTable.cshtml
@@ -15,11 +15,11 @@
             <tr>
                 <td>@ct.Name</td>
                 <td>
-                    <button class="btn btn-sm btn-link" onclick="EditCardType('@(ct.Id)', '@(ct.Name)')"
+                    <button class="btn btn-sm btn-link" onclick="EditCardType('@(ct.Id)', true)"
                             title="Edit Card Type">
                         <span class="fa-solid fa-pencil"></span>
                     </button>
-                    <button class="btn btn-sm btn-link" onclick="DeleteCardType('@(ct.Id)')"
+                    <button class="btn btn-sm btn-link" onclick="DeleteCardType('@(ct.Id)', '@(ct.Name)')"
                             title="Delete Card Type">
                         <span class="fa-solid fa-x text-danger"></span>
                     </button>
