--- a/MonopHelper/Pages/Version.cshtml
+++ b/MonopHelper/Pages/Version.cshtml
@@ -49,28 +49,7 @@
             </ul>
         </div>
 
-        <h4>Version: 1.0.2</h4>
-        <div class="list mb">
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">
-                    Add version history.
-                </li>
-                <li class="list-group-item">
-                    Index page is a generic home page with links to areas of the website.
-                </li>
-                <li class="list-group-item">
-                    Added cards into the game.
-                </li>
-                <li class="list-group-item">
-                    Can manage cards by uploading/adding new cards, modifying existing ones, or removing cards.
-                </li>
-                <li class="list-group-item">
-                    Different card decks based on difficulty.
-                </li>
-            </ul>
-        </div>
-
-        <h4>Version: 1.1.2</h4>
+        <h4>Version: 1.1.1</h4>
         <div class="list mb">
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">
@@ -82,8 +61,32 @@
                 <li class="list-group-item">
                     Games are now based on users.
                 </li>
+            </ul>
+        </div>
+
+        <h4>Version: 1.1.2</h4>
+        <div class="list mb">
+            <ul class="list-group list-group-flush">
                 <li class="list-group-item">
-                    Card decks and types are now based on tenant.
+                    Added version history.
+                </li>
+                <li class="list-group-item">
+                    Index page is a generic home page with links to areas of the website.
+                </li>
+                <li class="list-group-item">
+                    Added cards into the game.
+                </li>
+                <li class="list-group-item">
+                    Can manage cards by uploading/adding new cards, modifying existing ones, or removing cards.
+                </li>
+                <li class="list-group-item">
+                    Can create, edit, and remove different card types.
+                </li>
+                <li class="list-group-item">
+                    Different card decks based on difficulty.
+                </li>
+                <li class="list-group-item">
+                    Can select a card deck and play the cards in that deck.
                 </li>
             </ul>
         </div>
