--- a/MonopHelper/Pages/Shared/_Layout.cshtml
+++ b/MonopHelper/Pages/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/MonopHelper.styles.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/css/sweetalert2.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="~/css/login.css" asp-append-version="true"/>
     <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.14.5/dist/sweetalert2.min.css" rel="stylesheet">
 </head>
 <body>
@@ -46,7 +47,7 @@
                             <li><a class="dropdown-item" asp-page="/Cards/Manage">Manage Cards</a></li>
                         </ul>
                     </li>
-
+            
                     <li class="nav-item ml mr">
                         <a class="nav-link text-dark" asp-page="/Version">
                             Version History
