--- a/MonopHelper/Pages/Version.cshtml
+++ b/MonopHelper/Pages/Version.cshtml
@@ -90,5 +90,14 @@
                 </li>
             </ul>
         </div>
+
+        <h4>Version: 1.1.3</h4>
+        <div class="list mb">
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">
+                    Redesigned ASP.NET login page.
+                </li>
+            </ul>
+        </div>
     </div>
 </div>
