default chance and community chest

--- a/MonopHelper/Pages/Cards/Manage.cshtml
+++ b/MonopHelper/Pages/Cards/Manage.cshtml
@@ -119,6 +119,11 @@
                             </div>
 
                             <div class="h-line mt-3"></div>
+
+                            @* <button class="btn btn-danger text-white mt mb" style="width: 100%; word-break: break-word; word-wrap: break-word" *@
+                            @*         onclick=""> *@
+                            @*     Move all Cards *@
+                            @* </button> *@
                         </div>
                         <div class="col-sm-10">
                             <div class="card-body bg-light" id="CardsTable">
