fixes and can copy and move cards

--- a/MonopHelper/Pages/Version.cshtml
+++ b/MonopHelper/Pages/Version.cshtml
@@ -97,6 +97,12 @@
                 <li class="list-group-item">
                     Redesigned ASP.NET login page.
                 </li>
+                <li class="list-group-item">
+                    Tenant and User ID fixes.
+                </li>
+                <li class="list-group-item">
+                    Cards in a deck can now be moved or copied to a different deck.
+                </li>
             </ul>
         </div>
     </div>
