--- a/MonopHelper/Pages/Cards/Manage.cshtml
+++ b/MonopHelper/Pages/Cards/Manage.cshtml
@@ -108,7 +108,7 @@
                     <div class="row">
                         <div class="col-sm-2">
                             <button class="btn btn-info text-white mt mb" style="width: 100%; word-break: break-word; word-wrap: break-word"
-                                    onclick="location.assign('/Cards/Edit/0')">
+                                    onclick="location.assign('/Cards/Edit/0')" type="button">
                                 Create New Card
                             </button>
                             
@@ -119,11 +119,15 @@
                             </div>
 
                             <div class="h-line mt-3"></div>
-
-                            @* <button class="btn btn-danger text-white mt mb" style="width: 100%; word-break: break-word; word-wrap: break-word" *@
-                            @*         onclick=""> *@
-                            @*     Move all Cards *@
-                            @* </button> *@
+                            
+                            <button class="btn btn-danger text-white mt mb" style="width: 100%; word-break: break-word; word-wrap: break-word"
+                                    onclick="MoveCards(false)">
+                                Move All Cards
+                            </button>
+                            <button class="btn btn-success text-white mt mb" style="width: 100%; word-break: break-word; word-wrap: break-word"
+                                    onclick="MoveCards(true)">
+                                Copy All Cards
+                            </button>
                         </div>
                         <div class="col-sm-10">
                             <div class="card-body bg-light" id="CardsTable">
