Seperated out models

--- a/MonopHelper/Pages/Shared/Cards/_AddCardTypes.cshtml
+++ b/MonopHelper/Pages/Shared/Cards/_AddCardTypes.cshtml
@@ -1,4 +1,4 @@
-@model List<MonopHelper.Models.GameDb.Cards.CardType>
+@model List<MonopolyCL.Models.Cards.CardType>
 
 @{
     foreach (var type in Model)
