--- a/MonopHelper/Pages/Shared/Cards/_CardDecksTable.cshtml
+++ b/MonopHelper/Pages/Shared/Cards/_CardDecksTable.cshtml
@@ -1,4 +1,4 @@
-@model List<MonopHelper.Models.GameDb.Cards.CardDeck>
+@model List<MonopolyCL.Models.Cards.CardDeck>
 
 <table class="table table-striped table-hover table-bordered">
     <thead>
