--- a/MonopHelper/Pages/Shared/Cards/_CardTypesTable.cshtml
+++ b/MonopHelper/Pages/Shared/Cards/_CardTypesTable.cshtml
@@ -1,4 +1,4 @@
-@model List<MonopHelper.Models.GameDb.Cards.CardType>
+@model List<MonopolyCL.Models.Cards.CardType>
 
 
 <table class="table table-striped table-hover table-bordered">
