--- a/MonopHelper/Pages/Shared/Cards/_CardGameTable.cshtml
+++ b/MonopHelper/Pages/Shared/Cards/_CardGameTable.cshtml
@@ -1,4 +1,4 @@
-@model List<MonopHelper.Models.GameDb.Cards.CardGame>
+@model List<MonopolyCL.Models.Cards.CardGame>
 
 <table class="table table-bordered table-hover table-striped">
     <thead>
