major code base redesign

--- a/MonopHelper/Pages/Shared/_LoginPartial.cshtml
+++ b/MonopHelper/Pages/Shared/_LoginPartial.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
 @using MonopHelper.Authentication
+@using MonopolyCL.Models.Identity
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 @inject UserInfo UserInfo
