--- a/MonopHelper/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/MonopHelper/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,5 +1,5 @@
 @using Microsoft.AspNetCore.Mvc.TagHelpers
-@using MonopHelper.Authentication
+@using MonopolyCL.Models.Identity
 @inject SignInManager<ApplicationUser> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
